--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,7 @@ sdist
 develop-eggs
 .installed.cfg
 
+
 # Installer logs
 pip-log.txt
 
@@ -26,3 +27,4 @@ pip-log.txt
 .mr.developer.cfg
 
 UPGRADE_VERSION
+third-party
